force-app/main/default/objects/Agreement_Document__c/Agreement_Document__c.object-meta.xml
<CustomObject>
    <description>A container to attach Agreement Document for Retail and Network Partners</description>
    <label>Partner Agreement Document</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Agreement Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreement Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>