force-app/main/default/objects/Agreement_Document__c/fields/Agreement_Effective_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_From_Date__c</fullName>
    <description>The date the Agreement becomes effective</description>
    <inlineHelpText>Agreement Start Date</inlineHelpText>
    <label>Agreement Effective From Date</label>
    <type>Date</type>
</CustomField>