force-app/main/default/objects/Agreement_Document__c/fields/Agreement_Effective_From_Date_Reformat__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_From_Date_Reformat__c</fullName>
    <formula>TEXT(Agreement_Effective_From_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Effective From Date Reformat</label>
    <type>Text</type>
</CustomField>