force-app/main/default/objects/Agreement_Document__c/fields/Allow_Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Allow_Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to only allow submit for approval via the flow AgreeMgt - Submit Approval. Flag is set and reset in the flow, and used as an entry criteria for the approval process AgreeMgt-Approval.</description>
    <label>Allow Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>