force-app/main/default/objects/Agreement_Document__c/fields/Document_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Generated_Date__c</fullName>
    <description>The date time agreement document was generated</description>
    <label>Document Generated Date Base</label>
    <type>DateTime</type>
</CustomField>