force-app/main/default/objects/Agreement_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Licence_Type__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Licence_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipName>Agreement_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>