force-app/main/default/objects/Agreement_Document__c/fields/Floor_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_URL__c</fullName>
    <label>Floor Plan URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>