force-app/main/default/objects/Agreement_Document__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <label>Licence</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Licence_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>