force-app/main/default/objects/Agreement_Document__c/fields/Pre_Active_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Pre_Active_Checklist__c</fullName>
    <inlineHelpText>A list of tasks to complete before the Agreement Document record can be set to Active status.</inlineHelpText>
    <label>Pre Active Checklist</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>