force-app/main/default/objects/Agreement_Document__c/fields/Rate_List__c.field-meta.xml
<CustomField>
    <fullName>Rate_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate List</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Licence_Type__c</field>
            <operation>equals</operation>
            <valueField>Rate_List__c.Licence_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rate_List__c</referenceTo>
    <relationshipName>Licence_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>