force-app/main/default/objects/Agreement_Document__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>CASE(LEFT( Work_Centre_Code__c , 1), &apos;2&apos;, &apos;NSW/ACT&apos;, &apos;3&apos;, &apos;VIC&apos;, &apos;4&apos; , &apos;QLD&apos;, &apos;5&apos;,&apos;SA/NT&apos;,&apos;6&apos;,&apos;WA&apos;,&apos;7&apos;,&apos;TAS&apos;,&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>