force-app/main/default/objects/Agreement_Document__c/validationRules/Agreement_Effective_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Effective_From_Date</fullName>
    <active>true</active>
    <description>If Approval Type =  not null, and not Scanned Paper), then Agreement Effective From Date must be &gt;= Today()</description>
    <errorConditionFormula>AND(
        OR(
	    ISPICKVAL(Approval_Type__c, &apos;No&apos;),
            ISPICKVAL(Approval_Type__c, &apos;Full&apos;),
            ISPICKVAL(Approval_Type__c, &apos;Single&apos;)
        ),
        OR(
            ISPICKVAL(Status__c, &apos;New&apos;),
            ISPICKVAL(Status__c, &apos;Draft&apos;),
            ISPICKVAL(Status__c, &apos;Approved&apos;)
        ),
        Agreement_Effective_From_Date__c &lt; Today(),
		ISCHANGED(Agreement_Effective_From_Date__c) 
    )</errorConditionFormula>
    <errorMessage>The &apos;Agreement Effective From Date&apos; must be greater than or equal to today</errorMessage>
</ValidationRule>