force-app/main/default/objects/Agreement_Document__c/validationRules/Agreement_Review_Date_Under_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Review_Date_Under_From_Date</fullName>
    <active>true</active>
    <description>&apos;Agreement Review Date&apos; must be greater than or equal to the &apos;Agreement Effective From Date&apos;</description>
    <errorConditionFormula>Agreement_Effective_From_Date__c  &gt; Review_Date__c</errorConditionFormula>
    <errorMessage>&apos;Agreement Review Date&apos; must be greater than or equal to the &apos;Agreement Effective From Date&apos;</errorMessage>
</ValidationRule>