force-app/main/default/objects/Agreement_Document__c/validationRules/Agreement_To_Date_Under_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_To_Date_Under_From_Date</fullName>
    <active>true</active>
    <description>&apos;Agreement Effective To Date&apos; must be greater than or equal to the &apos;Agreement Effective From Date&apos;</description>
    <errorConditionFormula>Agreement_Effective_From_Date__c  &gt; Agreement_Effective_To_Date__c</errorConditionFormula>
    <errorMessage>&apos;Agreement Effective To Date&apos; must be greater than or equal to the &apos;Agreement Effective From Date&apos;</errorMessage>
</ValidationRule>