force-app/main/default/objects/Agreement_Document__c/validationRules/RO_Agreement_Effective_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RO_Agreement_Effective_From_Date</fullName>
    <active>true</active>
    <description>Field is not editable when the Agreement Document is Approved, Active, Ceased and Not Activated</description>
    <errorConditionFormula>AND(ISCHANGED(Agreement_Effective_From_Date__c), OR( ISPICKVAL(Status__c, &apos;Approved&apos;),ISPICKVAL(Status__c, &apos;Active&apos;),ISPICKVAL(Status__c, &apos;Ceased&apos;),ISPICKVAL(Status__c, &apos;Not Activated&apos;)) )</errorConditionFormula>
    <errorMessage>The Agreement Effective From Date is not editable when the Agreement Document status is Approved, Active, Ceased and Not Activated</errorMessage>
</ValidationRule>