force-app/main/default/objects/Agreement_Document__c/validationRules/RO_AP_Authorised_Officer.validationRule-meta.xml
<ValidationRule>
    <fullName>RO_AP_Authorised_Officer</fullName>
    <active>true</active>
    <description>Field is not editable when the Agreement Document is Approved, Awaiting Signature, Active, Ceased and Not Activated</description>
    <errorConditionFormula>AND(ISCHANGED(AP_Authorised_Officer__c ), OR( ISPICKVAL(Status__c, &apos;Approved&apos;),ISPICKVAL(Status__c, &apos;Awaiting Signature&apos;),ISPICKVAL(Status__c, &apos;Active&apos;),ISPICKVAL(Status__c, &apos;Ceased&apos;),ISPICKVAL(Status__c, &apos;Not Activated&apos;)) )</errorConditionFormula>
    <errorMessage>The AP Authorised Officer field is not editable when the Agreement Document status is Approved, Awaiting Signature, Active, Ceased and Not Activated</errorMessage>
</ValidationRule>