force-app/main/default/objects/Agreement_Document__c/validationRules/Status010_ToNew.validationRule-meta.xml
<ValidationRule>
    <fullName>Status010_ToNew</fullName>
    <active>true</active>
    <description>The status cannot be changed from another value to New</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;New&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;)))</errorConditionFormula>
    <errorMessage>The status cannot be returned to New</errorMessage>
</ValidationRule>