force-app/main/default/objects/Agreement_Document__c/validationRules/Status020_ToNotLocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Status020_ToNotLocated</fullName>
    <active>true</active>
    <description>The status can only be set to Not Located from New state.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Not Located&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Not Located&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Not Located from New state</errorMessage>
</ValidationRule>