force-app/main/default/objects/Agreement_Document__c/validationRules/Status030_ToPendingPreApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>Status030_ToPendingPreApproval</fullName>
    <active>true</active>
    <description>The status can only be set to Pending Pre-Approval by selecting the ‘Validate and Submit for Approval’ button while in status New.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Pending Pre-Approval&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Pre-Approval&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Pending Pre-Approval by selecting the ‘Validate and Submit for Approval’ button while in New state.</errorMessage>
</ValidationRule>