force-app/main/default/objects/Agreement_Document__c/validationRules/Status035_PreDraftChecklistFull.validationRule-meta.xml
<ValidationRule>
    <fullName>Status035_PreDraftChecklistFull</fullName>
    <active>true</active>
    <description>Please check the &apos;Pre Draft Checklist Complete&apos; flag to confirm you have completed all Pre Draft tasks.</description>
    <errorConditionFormula>AND(ISPICKVAL(Approval_Type__c, &quot;Full&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;),
ISPICKVAL(Status__c, &quot;Pending Pre-Approval&quot;),
OR(NOT(ISNULL(Pre_Draft_Checklist__c)),
NOT(ISBLANK(Pre_Draft_Checklist__c))),
NOT(Pre_Draft_Checklist_Complete__c))</errorConditionFormula>
    <errorMessage>Please check the &apos;Pre Draft Checklist Complete&apos; flag to confirm you have completed all Pre Draft tasks.</errorMessage>
</ValidationRule>