force-app/main/default/objects/Agreement_Document__c/validationRules/Status040_ToDraftFromPPAandPA.validationRule-meta.xml
<ValidationRule>
    <fullName>Status040_ToDraftFromPPAandPA</fullName>
    <active>true</active>
    <description>The user cannot set the status to Draft after the approval process has started</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Draft&quot;),
OR(ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Pre-Approval&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Approval&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;)))</errorConditionFormula>
    <errorMessage>The approval process must be completed.  Please recall the approval if required.</errorMessage>
</ValidationRule>