force-app/main/default/objects/Agreement_Document__c/validationRules/Status050_ToDraftFromNewFull.validationRule-meta.xml
<ValidationRule>
    <fullName>Status050_ToDraftFromNewFull</fullName>
    <active>true</active>
    <description>The record must be submitted for approval from new for full approval records</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Draft&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;),
ISPICKVAL(Approval_Type__c, &quot;Full&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;)))</errorConditionFormula>
    <errorMessage>Please select the ‘Validate and Submit for Approval’ button to submit the record for pre-approval</errorMessage>
</ValidationRule>