force-app/main/default/objects/Agreement_Document__c/validationRules/Status055_ToDraftFromNewNotFull.validationRule-meta.xml
<ValidationRule>
    <fullName>Status055_ToDraftFromNewNotFull</fullName>
    <active>true</active>
    <description>The user must select a  Document Type before changing the status to Draft</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Draft&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;),
ISBLANK(Document_ID__c),
NOT(ISPICKVAL(Approval_Type__c, &quot;Full&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;)))</errorConditionFormula>
    <errorMessage>Please select the a Document Type using the button &apos;Select Document Type&apos; before changing the status to Draft</errorMessage>
</ValidationRule>