force-app/main/default/objects/Agreement_Document__c/validationRules/Status060_PreDraftChecklistSingleNo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status060_PreDraftChecklistSingleNo</fullName>
    <active>true</active>
    <description>Please check the &apos;Pre Draft Checklist Complete&apos; flag to confirm you have completed all Pre Draft tasks.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Approval_Type__c, &quot;Single&quot;),
ISPICKVAL(Approval_Type__c, &quot;No&quot;)),
ISPICKVAL(PRIORVALUE(Status__c), &quot;New&quot;),
ISPICKVAL(Status__c, &quot;Draft&quot;),
NOT(ISBLANK(Pre_Draft_Checklist__c)),
NOT(Pre_Draft_Checklist_Complete__c))</errorConditionFormula>
    <errorMessage>Please check the &apos;Pre Draft Checklist Complete&apos; flag to confirm you have completed all Pre Draft tasks.</errorMessage>
</ValidationRule>