force-app/main/default/objects/Agreement_Document__c/validationRules/Status070_ToPendingApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>Status070_ToPendingApproval</fullName>
    <active>true</active>
    <description>The status can only be set to Pending Approval by selecting the ‘Validate and Submit for Approval’ button while in Draft state.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Pending Approval&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Approval&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Pending Approval by selecting the ‘Validate and Submit for Approval’ button while in Draft state.</errorMessage>
</ValidationRule>