force-app/main/default/objects/Agreement_Document__c/validationRules/Status080_ToApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status080_ToApproved</fullName>
    <active>true</active>
    <description>The status can only be set to Approved by completing the approval process.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Approved&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Approved&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Approved by completing the approval process.</errorMessage>
</ValidationRule>