force-app/main/default/objects/Agreement_Document__c/validationRules/Status090_ToAwaitingSignature.validationRule-meta.xml
<ValidationRule>
    <fullName>Status090_ToAwaitingSignature</fullName>
    <active>true</active>
    <description>The status can only be set to Awaiting Signature by selecting the ‘Send to Partner’ button while in Approved state.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Awaiting Signature&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Awaiting Signature&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Awaiting Signature by selecting the ‘Send to Partner’ button while in Approved state.</errorMessage>
</ValidationRule>