force-app/main/default/objects/Agreement_Document__c/validationRules/Status095_PreActiveChecklistNo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status095_PreActiveChecklistNo</fullName>
    <active>true</active>
    <description>Please check the &apos;Pre Active Checklist Complete&apos; flag to confirm you have completed all Pre Activation tasks.</description>
    <errorConditionFormula>AND(ISPICKVAL(Approval_Type__c, &quot;No&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;),
ISPICKVAL(Status__c, &quot;Active&quot;),
NOT(ISBLANK(Pre_Active_Checklist__c)),
NOT(Pre_Active_Checklist_Complete__c))</errorConditionFormula>
    <errorMessage>Please check the &apos;Pre Active Checklist Complete&apos; flag to confirm you have completed all Pre Activation tasks.</errorMessage>
</ValidationRule>