force-app/main/default/objects/Agreement_Document__c/validationRules/Status100_ToActiveFullSingle.validationRule-meta.xml
<ValidationRule>
    <fullName>Status100_ToActiveFullSingle</fullName>
    <active>true</active>
    <description>The status can only be set to Active from Awaiting Signature state when full or single approval</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Active&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Awaiting Signature&quot;)),
OR(ISPICKVAL(Approval_Type__c, &quot;Full&quot;),
ISPICKVAL(Approval_Type__c, &quot;Single&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Active from Awaiting Signature state.</errorMessage>
</ValidationRule>