force-app/main/default/objects/Agreement_Document__c/validationRules/Status110_ToActiveNo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status110_ToActiveNo</fullName>
    <active>true</active>
    <description>The status can only be set to Active from Draft state when no approval</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Active&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;)),
ISPICKVAL(Approval_Type__c, &quot;No&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Active from Draft state.</errorMessage>
</ValidationRule>