force-app/main/default/objects/Agreement_Document__c/validationRules/Status120_ToActivePaper.validationRule-meta.xml
<ValidationRule>
    <fullName>Status120_ToActivePaper</fullName>
    <active>true</active>
    <description>The status can only be set to Active from Draft state when scanned paper approval</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Active&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Approved&quot;)),
ISPICKVAL(Approval_Type__c, &quot;Scanned Paper&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Active from Approved state.</errorMessage>
</ValidationRule>