force-app/main/default/objects/Agreement_Document__c/validationRules/Status160_ToCeased.validationRule-meta.xml
<ValidationRule>
    <fullName>Status160_ToCeased</fullName>
    <active>true</active>
    <description>The status can only be set to Ceased from Active state</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Ceased&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Ceased&quot;)))</errorConditionFormula>
    <errorMessage>The status can only be set to Ceased from Active state</errorMessage>
</ValidationRule>