force-app/main/default/objects/Agreement_Document__c/validationRules/Status170_ToNotActivatedFromActive.validationRule-meta.xml
<ValidationRule>
    <fullName>Status170_ToNotActivatedFromActive</fullName>
    <active>true</active>
    <description>The status cannot be set to Not Activated from Active state</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Not Activated&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Not Activated&quot;)))</errorConditionFormula>
    <errorMessage>The status cannot be set to Not Activated from Active state</errorMessage>
</ValidationRule>