force-app/main/default/objects/Agreement_Document__c/validationRules/Status180_ToNotActivatedFromPPAandPA.validationRule-meta.xml
<ValidationRule>
    <fullName>Status180_ToNotActivatedFromPPAandPA</fullName>
    <active>true</active>
    <description>To reject the record, please first recall the approval.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Not Activated&quot;),
OR(ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Pre-Approval&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Pending Approval&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Not Activated&quot;)))</errorConditionFormula>
    <errorMessage>To set the record to Not Activated, please first recall the approval.</errorMessage>
</ValidationRule>