force-app/main/default/objects/Agreement_Document__c/validationRules/Status190_FromEndStates.validationRule-meta.xml
<ValidationRule>
    <fullName>Status190_FromEndStates</fullName>
    <active>true</active>
    <description>The status cannot be changed from End states to Draft</description>
    <errorConditionFormula>OR(ISPICKVAL(PRIORVALUE(Status__c), &quot;Ceased&quot;)
,ISPICKVAL(PRIORVALUE(Status__c), &quot;Not Activated&quot;))</errorConditionFormula>
    <errorDisplayField>Active_Date__c</errorDisplayField>
    <errorMessage>The status cannot be changed from an end state.</errorMessage>
</ValidationRule>