force-app/main/default/objects/Agreement_Document__c/validationRules/Status200_Active_to_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Status200_Active_to_Draft</fullName>
    <active>true</active>
    <description>Status should not be able to be changed from &apos;Active&apos; to &apos;Draft&apos;.</description>
    <errorConditionFormula>AND((ISPICKVAL(PRIORVALUE(Status__c), &quot;Active&quot;)),ISPICKVAL(Status__c,&apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Status can not be changed from &apos;Active&apos; to &apos;Draft&apos;</errorMessage>
</ValidationRule>