force-app/main/default/objects/Agreement_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Licence__c</columns>
    <columns>Licence_Type__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Agreement_Effective_From_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>