force-app/main/default/objects/Agreement_Document__c/listViews/All_LPO_Licence_Agreements.listView-meta.xml
<ListView>
    <fullName>All_LPO_Licence_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Licence__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Agreement_Effective_From_Date__c</columns>
    <columns>Agreement_Effective_To_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Licence_Type__c</field>
        <operation>equals</operation>
        <value>LPO</value>
    </filters>
    <label>All LPO Licence Agreements</label>
</ListView>